Adapt javadoc generation.