@@ -26,26 +26,23 @@ dependencies {
     javadocTaglets "org.jdrupes.taglets:plantuml-taglet:3.0.0"
 }
 
-task javadocResources(type: Copy) {
-    into file(docDestinationDir)
-    from ("${rootProject.rootDir}/misc") {
-        include '*.woff2'
-    }
-}
-
 task apidocs (type: JavaExec) {
     // Does not work on JitPack, no /usr/bin/dot
     enabled = JavaVersion.current() == JavaVersion.VERSION_21
 
-    dependsOn javadocResources
-
     outputs.dir(docDestinationDir)
     
     inputs.file rootProject.file('overview.md')
-    inputs.file "${rootProject.rootDir}/misc/stylesheet.css"
+    inputs.file "${rootProject.rootDir}/misc/javadoc-overwrites.css"
 
-    jvmArgs = ['--add-exports=jdk.javadoc/jdk.javadoc.internal.tool=ALL-UNNAMED',
-               '--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED']
+    jvmArgs = ['--add-exports=jdk.compiler/com.sun.tools.doclint=ALL-UNNAMED',
+        '--add-exports=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED',
+        '--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED',
+        '--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED',
+        '--add-exports=jdk.javadoc/jdk.javadoc.internal.tool=ALL-UNNAMED',
+        '--add-exports=jdk.javadoc/jdk.javadoc.internal.doclets.toolkit=ALL-UNNAMED',
+        '--add-opens=jdk.javadoc/jdk.javadoc.internal.doclets.toolkit.resources.releases=ALL-UNNAMED',
+        '-Duser.language=en', '-Duser.region=US']
     mainClass = 'jdk.javadoc.internal.tool.Main'
 
     gradle.projectsEvaluated {
@@ -88,7 +85,7 @@ task apidocs (type: JavaExec) {
             '-bottom', rootProject.file("misc/javadoc.bottom.txt").text,
             '--allow-script-in-comments',
             '-Xdoclint:-html',
-            '--main-stylesheet', "${rootProject.rootDir}/misc/stylesheet.css",
+            '--add-stylesheet', "${rootProject.rootDir}/misc/javadoc-overwrites.css",
             '--add-exports=jdk.javadoc/jdk.javadoc.internal.doclets.formats.html=ALL-UNNAMED',
             '-quiet'
             ]
@@ -97,6 +94,25 @@ task apidocs (type: JavaExec) {
     ignoreExitValue true
 }
 
+task testJavadoc(type: Javadoc) {
+    enabled = JavaVersion.current() == JavaVersion.VERSION_21
+
+    source = fileTree(dir: 'testfiles', include: '**/*.java')
+    destinationDir = project.file("build/testfiles-gradle")
+    options.docletpath = configurations.markdownDoclet.files.asType(List)
+    options.doclet = 'org.jdrupes.mdoclet.MDoclet'
+    options.overview = 'testfiles/overview.md'
+    options.addStringOption('Xdoclint:-html', '-quiet')
+
+    options.setJFlags([
+        '--add-exports=jdk.compiler/com.sun.tools.doclint=ALL-UNNAMED',
+        '--add-exports=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED',
+        '--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED',
+        '--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED',
+        '--add-exports=jdk.javadoc/jdk.javadoc.internal.tool=ALL-UNNAMED',
+        '--add-exports=jdk.javadoc/jdk.javadoc.internal.doclets.toolkit=ALL-UNNAMED',
+        '--add-opens=jdk.javadoc/jdk.javadoc.internal.doclets.toolkit.resources.releases=ALL-UNNAMED'])
+}
 // Prepare github authentication for plugins
 if (System.properties['org.ajoberstar.grgit.auth.username'] == null) {
     System.setProperty('org.ajoberstar.grgit.auth.username',
